Update layouts, remove Barba

--- a/page/404.pug
+++ b/page/404.pug
@@ -17,7 +17,7 @@ block dinosaur
                           __/  /          _\  )
                         .<___.'         .<___/
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='NOINDEX, NOFOLLOW')
     meta(name='description', content='You have attempted to access a page that does not exist!')
     title 404'd!
