--- a/page/pages/guify/index.pug
+++ b/page/pages/guify/index.pug
@@ -41,14 +41,13 @@ block dinosaur
 
 
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Guify')
     title Guify
 
 append head
     style.
-
         #guify-container {
             max-width: 512px;
             max-height: 512px;
