--- a/page/pages/lobo/index.pug
+++ b/page/pages/lobo/index.pug
@@ -38,7 +38,7 @@ block dinosaur
                            .-'/   /='  '[       '
                        
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='author', content='Jonathan Cole')
     meta(name='description', content='LOBO Buoy Visualizer')
