--- a/page/pages/mazer/index.pug
+++ b/page/pages/mazer/index.pug
@@ -23,7 +23,7 @@ block dinosaur
                                       \\      WWW
             
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Mazer')
     title Mazer
