--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -18,7 +18,7 @@ block dinosaur
                                              \\  \          \\  \
                                              <'_V_'>        <'_V_'>
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Waldorf - Media Ecology Project')
     title Media Ecology Project - Waldorf
