--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -29,7 +29,7 @@ block dinosaur
                          /\____=\       /\_____=\
 
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Reaction-Diffusion simulation using Three.js.')
     meta(name='keywords', content='GPGPU, Reaction, Diffusion, Simulator, Gray, Scott, Three')
