--- a/page/pages/reflector/index.pug
+++ b/page/pages/reflector/index.pug
@@ -22,7 +22,7 @@ block dinosaur
                                   \\      WWW
                                   MMM
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Reflector Tester')
     title Reflector Tester
