--- a/page/pages/spurious-spatial-correlations/index.pug
+++ b/page/pages/spurious-spatial-correlations/index.pug
@@ -17,15 +17,15 @@ block dinosaur
                           __/  /          _\  )
                         .<___.'         .<___/
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Wild speculation about geospatial data trends.')
     meta(name='keywords', content='UMaine, Maine, Spurious, Spatial, Correlations, Correlation, GIS')
     title Spurious (Spatial) Correlations
 
-
 append title
     | Spurious (Spatial) Correlations
+    
 append content
     p
         | This is a project I did for Introduction to GIS at my university. Inspired by 
