--- a/partials/head.pug
+++ b/partials/head.pug
@@ -1,15 +1,10 @@
-head
-    // The following 3 meta tags *must* come first in the head; any other head content must come *after* these tags
-    | <meta charset="utf-8">
-    | <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    | <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    // Icon info
-    | <link rel="apple-touch-icon" href="resources/favicon/apple-icon-180x180.png">
-    | <link rel="icon" type="image/png" sizes="192x192" href="resources/favicon/android-icon-192x192.png">
-    | <link rel="icon" type="image/png" sizes="96x96" href="resources/favicon/favicon-96x96.png">
-    // Page meta info
-    | <meta NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-    | <meta name="author" content="Jonathan Cole">
-    | <meta name="description" content="Jonathan Cole's website.">
-    | <meta name="keywords" content="portfolio, about, computer, science, programmer">
-    | <title>Jonathan Cole</title>
+// The following 3 meta tags *must* come first in the head; any other head content must come *after* these tags
+meta(charset='utf-8')
+meta(http-equiv='X-UA-Compatible', content='IE=edge')
+meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
+// Icon info
+link(rel='apple-touch-icon', href='resources/favicon/apple-icon-180x180.png')
+link(rel='icon', type='image/png', sizes='192x192', href='resources/favicon/android-icon-192x192.png')
+link(rel='icon', type='image/png', sizes='96x96', href='resources/favicon/favicon-96x96.png')
+// Page meta info
+meta(name='author', content='Jonathan Cole')
