--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -41,7 +41,7 @@ body {
     padding: 0 2em 0 2em;
     animation-duration: .38s;
     animation-fill-mode: both;
-    //animation-name: fadeInAnimation;
+    animation-name: fadeInAnimation;
     max-width: $content-max-width;
     margin-bottom: 4em;  // Some padding on the bottom for breathing room
     margin-left: 0;
