--- a/page/about.pug
+++ b/page/about.pug
@@ -26,7 +26,7 @@ block dinosaur
                               |/`)
                               'c=,
 
-append headinfo
+append meta
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Bio and contact information for Jonathan Cole')
     meta(name='keywords', content='UMaine, Jonathan, Cole, SIE, Spatial, Computer, Science, VEMI')
