--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -24,7 +24,7 @@ body {
     font-family: $title-font;
     font-size: 35px;
     line-height: $title-header-height;
-    padding: 0 0.75em;
+    padding-left: 0.75em;
     //text-align: right;
 
     font-weight: lighter;
