--- a/page/404.pug
+++ b/page/404.pug
@@ -18,10 +18,8 @@ block dinosaur
                         .<___.'         .<___/
 
 append meta
-    meta(name='ROBOTS', content='NOINDEX, NOFOLLOW')
-    meta(name='description', content='You have attempted to access a page that does not exist!')
+    meta(name='robots', content='noindex, nofollow')
     title 404'd!
-
 
 append content
     h1 404'd!
