--- a/page/index.pug
+++ b/page/index.pug
@@ -37,13 +37,12 @@ block dinosaur
                                                  (o)====(o)
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content="Jonathan Cole's website.")
     meta(name='keywords', content='portfolio, about, computer, science, programmer, developer')
     title Jonathan Cole
 
 append title
-    | Hi! I'm Jon.
+    | Hi, I'm Jon.
 append title-header-hook
     button#thursday-button.btn.btn-danger(type='button') It's Thursday
 
