--- a/page/pages/dust/index.pug
+++ b/page/pages/dust/index.pug
@@ -79,8 +79,8 @@ block dinosaur
         
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Dust')
+    meta(name='description', content='Cellular Automata in your browser.')
+    meta(name='keywords', content='cellular, automata, javascript, js, browser')
     title Dust  
 
 append head
