--- a/page/pages/guify/index.pug
+++ b/page/pages/guify/index.pug
@@ -42,8 +42,8 @@ block dinosaur
 
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Guify')
+    meta(name='description', content='Guify is a flexible, simple GUI for your JavaScript projects.')
+    meta(name='keywords', content='gui, javascript, js, browser, npm, es6')
     title Guify
 
 append head
