--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -25,8 +25,8 @@ block dinosaur
 
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Jon Trombone')
+    meta(name='description', content='A tragic monument to vanity.')
+    meta(name='keywords', content='pink, trombone, javascript, js, speech, synthesis, tragic')
     title Jon Trombone
 
 append head
