--- a/page/pages/lobo/index.pug
+++ b/page/pages/lobo/index.pug
@@ -39,9 +39,8 @@ block dinosaur
                        
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='author', content='Jonathan Cole')
-    meta(name='description', content='LOBO Buoy Visualizer')
+    meta(name='description', content='A visualizer for LOBO buoys in Unity.')
+    meta(name='keywords', content='lobo, buoy, unity')
     title LOBO Buoy Vizualizer
 
 
