--- a/page/pages/mazer/index.pug
+++ b/page/pages/mazer/index.pug
@@ -24,8 +24,8 @@ block dinosaur
             
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Mazer')
+    meta(name='description', content='An exploration of algorithms for generating and solving mazes.')
+    meta(name='keywords', content='maze, generation, solver, javascript, js, browser')
     title Mazer
 
 append head
