--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -19,8 +19,8 @@ block dinosaur
                                              <'_V_'>        <'_V_'>
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Waldorf - Media Ecology Project')
+    meta(name='description', content='Waldorf is a frontend for viewing and creating rich annotations for web video.')
+    meta(name='keywords', content='video, frontend, annotation, media, ecology, project, js, javascript')
     title Media Ecology Project - Waldorf
 
 append title
