--- a/page/pages/media-ecology/raw.pug
+++ b/page/pages/media-ecology/raw.pug
@@ -3,10 +3,12 @@ html
     head
         title Annotator Test Page
         meta(name='description', content='Annotator Test Page')
-        meta(name='author', content='VEMILab Clave Team')
+        meta(name='robots', content='noindex, nofollow')
+
         script(src='https://code.jquery.com/jquery-3.1.1.min.js')
         script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
         link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
+        
         script(type='text/javascript', src='annotator-frontend.js')
         link(rel='stylesheet', href='annotator-frontend.css')
     body
