--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -30,8 +30,7 @@ block dinosaur
 
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Reaction-Diffusion simulation using Three.js.')
+    meta(name='description', content='A GPGPU Reaction-Diffusion simulator for the web.')
     meta(name='keywords', content='GPGPU, Reaction, Diffusion, Simulator, Gray, Scott, Three')
 
     title Reaction-Diffusion Simulator
