--- a/page/pages/reflector/index.pug
+++ b/page/pages/reflector/index.pug
@@ -23,8 +23,7 @@ block dinosaur
                                   MMM
 
 append meta
-    meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Reflector Tester')
+    meta(name='description', content='Unity project to help visualize laser reflections.')
     title Reflector Tester
 
 append head
