Remove unused files; minor cleanup / changes

--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -19,6 +19,7 @@ html
         block meta
 
         // Set background color of CSS to prevent white flashing before everything has loaded
+        // (if your background isn't white to start with)
         style(type='text/css').
             body {
                 background-color: #fff;
