--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -59,7 +59,7 @@ body {
 
     h2, h3, h4, h5, h6 {
         font-family: $header-font;
-        color: $primary_color;
+        color: $secondary_color;
     }
 
     p {
